<resources>
    <string name="app_name">Counsling</string>
    <string name="login_expert">Login Expert</string>
    <string name="login">Login</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="whatsapp_number">WhatsApp Number</string>
    <string name="book">Book</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="follow_us_on_instagram">Follow us on Instagram</string>
    <string name="review_on_video">Review On Video</string>
    <string name="facebook">Facebook</string>
    <string name="how_would_you_like_to_review_the_session">How would you like to review the session.</string>
    <string name="problem_facing">Problem Facing ?</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="full_name">Full Name</string>
    <string name="calling">OUTGOING CALLING</string>
    <string-array name="issue">
        <item>Relationship</item>
        <item>Health</item>
        <item>Career/Finances</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="confirm_your_email_and_we_ll_send_and_instructions">Confirm your email and we\'ll send and instructions.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password">Reset password</string>
    <string name="user_login">User Login</string>
    <string name="remender_me">Remember me</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="name">Name</string>
    <string name="hello">Hello</string>
    <string name="time_of_calling">Time of calling</string>
</resources>