<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#082628"
    android:orientation="vertical"
    tools:context=".activities.ForgetPasswordActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_your_password"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="@dimen/_25sdp"
        android:includeFontPadding="false"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginStart="@dimen/_25sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:textSize="@dimen/_16sdp"
        android:includeFontPadding="false"
        android:textColor="#fff"
        android:text="@string/confirm_your_email_and_we_ll_send_and_instructions"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_25sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_height="wrap_content">
        <EditText
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:hint="@string/enter_your_email"
            android:id="@+id/forgetemail"
            android:layout_height="@dimen/_45sdp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:textSize="@dimen/_13ssp"
            android:background="@null"
            />
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_25ssp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:includeFontPadding="false"
        android:id="@+id/resetpassword"
        android:textSize="@dimen/_13ssp"
        android:text="@string/reset_password"
        />
</LinearLayout>