<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#082628"
    tools:context=".activities.BookingActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/wrapper1"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearlayout"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:src="@drawable/backarrow"
                android:id="@+id/back"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/app_name" />
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:background="#084D0A"
                android:layout_margin="@dimen/_20sdp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent"
                    tools:ignore="ExtraText">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name"
                        android:padding="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        style="@style/Base.CardView"
                        android:textColor="#000"
                        android:textSize="@dimen/_15sdp"
                        />
                    <EditText
                        android:id="@+id/name"
                        android:hint="@string/enter_your_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:padding="@dimen/_12ssp"
                        android:includeFontPadding="false"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textSize="@dimen/_13ssp"
                        android:background="@null"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/whatsapp_number"
                        style="@style/Base.CardView"
                        android:padding="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:textColor="#000"
                        android:textSize="@dimen/_15sdp"
                        />
                    <EditText
                        android:id="@+id/number"
                        android:hint="@string/enter_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:padding="@dimen/_12ssp"
                        android:includeFontPadding="false"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textSize="@dimen/_13ssp"
                        android:background="@null"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/problem_facing"
                        android:padding="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:textColor="#000"
                        android:textSize="@dimen/_15sdp"
                        />
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:id="@+id/spinner"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="When we call you"
                        style="@style/Base.CardView"
                        android:padding="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:textColor="#000"
                        android:textSize="@dimen/_15sdp"
                        />
                    <EditText
                        android:id="@+id/callyou"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:padding="@dimen/_12ssp"
                        android:hint="Mondey"
                        android:includeFontPadding="false"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textSize="@dimen/_13ssp"
                        android:background="@null"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/how_would_you_like_to_review_the_session"
                        style="@style/Base.CardView"
                        android:padding="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:textColor="#000"
                        android:textSize="@dimen/_15sdp"
                        />
                    <CheckBox
                        android:id="@+id/checkbox_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/facebook"
                        style="@style/Base.CardView"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp"
                        android:button="@null"
                        android:drawableStart="@drawable/checkbox"/>
                    />
                    <CheckBox
                        android:id="@+id/checkbox_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/review_on_video"
                        style="@style/Base.CardView"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp"
                        android:button="@null"
                        android:drawableStart="@drawable/checkbox"/>
                    />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follow_us_on_instagram"
                        style="@style/Base.CardView"
                        android:padding="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:textColor="#000"
                        android:textSize="@dimen/_15sdp"
                        />
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/radiogroup"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:fontFamily="monospace"
                        android:padding="@dimen/_5sdp">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:id="@+id/yes"
                            android:layout_height="wrap_content"
                            android:textColor="#fff"
                            android:elevation="@dimen/_5sdp"
                            android:text="@string/yes"
                            android:button="@android:color/transparent"
                            android:background="@drawable/radio_check"
                            android:padding="@dimen/_10sdp"
                            />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:textColor="#fff"
                            android:id="@+id/no"
                            android:elevation="@dimen/_5sdp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:background="@drawable/radio_check"
                            android:text="@string/no"
                            android:button="@android:color/transparent"
                            android:padding="@dimen/_10sdp"
                            />
                    </RadioGroup>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_marginBottom="@dimen/_30sdp"
                        android:layout_height="wrap_content">
                        <Button
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            style="@style/Base.CardView"
                            android:background="@drawable/button_background"
                            android:layout_height="match_parent"
                            android:text="@string/book"
                            android:id="@+id/book"
                            />
                        <ProgressBar
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:id="@+id/progressbar"
                            android:layout_gravity="center"
                            android:visibility="invisible"
                            />
                    </FrameLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </ScrollView>
    </FrameLayout>
</LinearLayout>