<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_screen"
    tools:context=".activities.ExpertLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="460dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="15dp"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrlyout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="13dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/user"
                    android:contentDescription="@string/app_name" />

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="#00000000"
                    android:hint="@string/enter_email"
                    android:inputType="text"
                    android:letterSpacing="0.1"
                    android:padding="10dp"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="16sp"
                    tools:ignore="TextFields"
                    android:autofillHints="@string/yes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="13dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/password"
                    android:contentDescription="@string/app_name" />

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="#00000000"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:letterSpacing="0.1"
                    android:padding="10dp"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="16sp"
                    android:autofillHints="@string/yes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#fff" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/bytes"
        style="@style/BoldMono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lnrlyout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:layout_marginBottom="270dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />
</RelativeLayout>