<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BookingShowActivity">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/backarrow"
                app:tint="#000" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_40sdp">

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:includeFontPadding="false"
                android:text="Name Of Person :"
                android:textSize="@dimen/_15sdp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t1"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:text="Hello"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:text="Number : "
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t2"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:text="999125633"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/t3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/number"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:text="Problem Issue :"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/problem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t3"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:text="@string/hello"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/t4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/problem"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:text="@string/time_of_calling"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/callyou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t4"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:text="@string/hello"
                android:textSize="@dimen/_15sdp" />

            <ImageView
                android:id="@+id/calling"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/_15sdp"
                android:background="@drawable/bg_round"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/audio_call"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/callinglayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/outgoing"
        android:orientation="vertical"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_55sdp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/calling"
                android:textColor="#fff"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usershowname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="132dp"
                android:text="@string/name"
                android:textColor="#fff"
                android:textSize="@dimen/_15sdp" />

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usershowname"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:visibility="gone"
                android:textColor="#fff"
                android:textSize="@dimen/_13sdp" />

            <ImageView
                android:id="@+id/endcall"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="133dp"
                android:background="@drawable/bg_round"
                android:backgroundTint="#FF0F0F"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_call_end_black_24dp" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>